# C-UnitTesting

./: CMakeLists.txt  README.md  TestCase  TestCase.cpp  main.cpp  test.cpp
REquireCheck/: requirecheck.cpp
TemplateTesting/: CMakeLists.txt  max1.cpp  test.cpp
Tests/: test.cpp
Tests/TemplateTesting/: CMakeLists.txt  max1.hpp
Vectors/: CMakeLists.txt  Vecconstructor.cpp  main.cpp
